Complete full website, still minor spacing issues

--- a/main.css
+++ b/main.css
@@ -97,7 +97,7 @@ html {
     margin-left: auto;
     margin-right: auto;
     margin-top: 20px;
-    margin-bottom: 20px;
+    margin-bottom: 25px;
 }
 
 .search:hover {
@@ -122,6 +122,32 @@ html {
 
 /* Side by Side Search Buttons*/
 
+.search-buttons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
+}
+
+.search-buttons button {
+    font-size: 14px;
+    color: rgba(0, 0, 0, 0.753);
+    cursor: pointer;
+    opacity: .75;
+    border: none;
+    padding: 12px;
+    border-radius: 5px;
+}
+
+.search-buttons button:hover {
+    color: black;
+    opacity: 1;
+    border-style: solid;
+    border-width: .25px;
+    border-color: rgba(43, 32, 32, 0.178);
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+}
+
 
 /* Footer Bar */
 
@@ -130,7 +156,7 @@ html {
     display: block;
     position: fixed;
     width: 100%;
-    height: 50px;
+    height: 40px;
     z-index: 104;
     background-color: #f2f2f2;
     border-top: 1px solid #e4e4e4;
@@ -139,8 +165,8 @@ html {
 
 .footer ul {
     list-style-type: none;
-    margin: -5px;
-    padding: 15px;
+    margin: -10px 0px 0px -10px;
+    padding: 15px 20px 5px 20px;
     background-color: ;
     font-size: 14px;
     height: 15px;
